Closed Bug 370422 Opened 17 years ago Closed 17 years ago

[FIX]Select drop down button doesn't update its position in this case when document widens

Categories

(Core :: Layout: Form Controls, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha3

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

Details

(Keywords: regression, testcase)

Attachments

(3 files)

Attached file testcase
See testcase, the iframe gets wider after 0.5 seconds.
The select drop down should become wider then, also, but in current trunk builds, the select drop down stays at the same place.

This regressed between 2007-01-26 and 2007-01-28:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2007-01-26+05&maxdate=2007-01-28+09&cvsroot=%2Fcvsroot
My guess is a regression from bug 163504 or bug 9458.
Well, it's not bug 365477 (tested by local backout).
So this is a regression from the patch in bug 163504...  The issue is that the combobox display frame has a width that depends on the available width, but it's not flagged as such in any way.

We can fix this bug by setting that frame to "display: inline-block", though that's just there to appease the check bug 163504 added, since we still munge the width.  Is there a way we could nix the width-munging altogether, short of using table-cell display or something?  Basically, we want to take up all the space except for the width of the dropdown marker.
Blocks: 163504
We should just add the frame type to the list in IsPercentageAware, no?  (nsLineLayout.cpp, around line 750)  The hack would only fix it if it were !important, and I don't think that's necessary.
This frame doesn't have a special frame type (though we could add one, I guess), but content can't style it in any case.  So the non-!important thing does work.

I guess adding a frame type is the easiest thing to do here, if we can't get rid of that frame class altogether.
Ah, ok, hadn't realized it was one of the inner frames.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
OS: Windows XP → All
Priority: -- → P3
Hardware: PC → All
Summary: Select drop down button doesn't update its position in this case when document widens → [FIX]Select drop down button doesn't update its position in this case when document widens
Target Milestone: --- → mozilla1.9alpha3
Attachment #256569 - Flags: superreview?(dbaron)
Attachment #256569 - Flags: review?(dbaron)
Attachment #256569 - Flags: superreview?(dbaron)
Attachment #256569 - Flags: superreview+
Attachment #256569 - Flags: review?(dbaron)
Attachment #256569 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: