Make the display frame resize correctly when the <select>'s width changes.  Bug 370422, r+sr=dbaron